fix(demo): add wrap to demo grid

--- a/demo/style/demo/_demo-grid.scss
+++ b/demo/style/demo/_demo-grid.scss
@@ -4,6 +4,7 @@
 
 .demo-grid {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 
     & > * {
